CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(webscoket)
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src SRCDIR)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include INCLUDEDIR)
ADD_EXECUTABLE(main ${SRCDIR})
SET( EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin) 
FIND_PACKAGE(Threads)
TARGET_LINK_LIBRARIES(main ${CMAKE_THREAD_LIBS_INIT})